GNOME Bugzilla – Bug 766172
v4l2videodec: [Regressions] Should not fail if S_FMT(CAPTURE) fail after STREAMON(CAPTURE)
Last modified: 2016-06-07 21:21:30 UTC
As we added output format negotiation recently, we simply used gst_v4l2_object_set_format() to try and set the negotiated format. This cause a regression if the driver does not support this because this function post an error on the bus directly. In fact, it's not mandatory, most decoder have a single output format. We still want to call S_FMT, as some driver (buggy ?) won't work if you don't expliclty call S_FMT on the CAPTURE side. In future rework, I would rather split the element handling from the V4L2 handling completely, so we can avoid this kind of issues.
Created attachment 329331 [details] [review] v4l2-util: Introduce GstV4l2Error This is to allow returning an error that can easily be sent as message to the application if the element needs it. Using this also allow ignoring errors.
Created attachment 329332 [details] [review] v4l2: Add an error return to _try/_set_format This way one can easily ignore errors. Previously, error were always posted ont he bus.
Created attachment 329340 [details] [review] v4l2-util: Introduce GstV4l2Error This is to allow returning an error that can easily be sent as message to the application if the element needs it. Using this also allow ignoring errors.
Created attachment 329341 [details] [review] v4l2: Add an error return to _try/_set_format This way one can easily ignore errors. Previously, error were always posted ont he bus.
Created attachment 329342 [details] [review] v4l2-util: Introduce GstV4l2Error This is to allow returning an error that can easily be sent as message to the application if the element needs it. Using this also allow ignoring errors.
Created attachment 329343 [details] [review] v4l2: Add an error return to _try/_set_format This way one can easily ignore errors. Previously, error were always posted ont he bus.
Attachment 329342 [details] pushed as e228430 - v4l2-util: Introduce GstV4l2Error Attachment 329343 [details] pushed as 3b5cac3 - v4l2: Add an error return to _try/_set_format
Branch: 1.8 Commit: 8cc80aafee75c20e6c713180daa2acba9d702304 Commit: b2e62cfb1cc3d407cba51c1138866e29536b331d